--- a/back-app/src/main/resources/application.properties
+++ b/back-app/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # ?? Data source
-spring.datasource.url=jdbc:mariadb://localhost:3306/task?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mariadb://localhost:3306/taskManagement?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 
@@ -26,4 +26,4 @@ spring.servlet.multipart.max-request-size=10MB
 # * Manage bean
 spring.main.allow-bean-definition-overriding=true
 
-# server.address=192.168.223.182
+server.address=192.168.88.43
