--- a/front-app/package.json
+++ b/front-app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
@@ -27,7 +28,8 @@
     "react-native-reanimated": "^3.8.0",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "@react-native-community/datetimepicker": "7.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
